// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CRLF.php - php-verify: CRLF.php 1`] = `
<?php\\r
$test = 1;\\r
\\r
class Foo\\r
{\\r
    /**\\r
     * Comment indented with tabs in file with utf-8[dos]\\r
     */\\r
    private $foo;\\r
}\\r
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php\\r
$test = 1;\\r
\\r
class Foo\\r
{\\r
    /**\\r
     * Comment indented with tabs in file with utf-8[dos]\\r
     */\\r
    private $foo;\\r
}\\r

`;

exports[`LF.php - php-verify: LF.php 1`] = `
<?php
$test = 1;
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-with-multiple-LF.php - php-verify: file-terminated-with-multiple-LF.php 1`] = `
<?php
$test = 1;


~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;

exports[`file-terminated-without-line-ending.php - php-verify: file-terminated-without-line-ending.php 1`] = `
<?php
$test = 1;~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<?php
$test = 1;

`;
